<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>de.cuioss.jwt</groupId>
        <artifactId>cui-jwt-quarkus-parent</artifactId>
        <version>1.0.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>quarkus-integration-benchmark</artifactId>
    <packaging>jar</packaging>
    <name>JWT Quarkus Integration Benchmarking</name>
    <description>Integration benchmarking module for JWT Quarkus extension using containerized environments</description>

    <properties>
        <maven.jar.plugin.automatic.module.name>de.cuioss.jwt.quarkus.integration.benchmark</maven.jar.plugin.automatic.module.name>
        <skip.benchmark>true</skip.benchmark>
        <sonar.skip>true</sonar.skip>


        <!-- HTTPS configuration for testing (reuse integration tests ports) -->
        <test.https.port>10443</test.https.port>
        <test.keycloak.port>1080</test.keycloak.port>

        <!-- JMH Configuration Properties -->
        <jmh.result.format>JSON</jmh.result.format>
        <jmh.result.filePrefix>benchmark-results/integration-benchmark-result</jmh.result.filePrefix>
        <jmh.iterations>3</jmh.iterations>
        <jmh.warmupIterations>2</jmh.warmupIterations>
        <jmh.forks>1</jmh.forks>
        <jmh.threads>2</jmh.threads>
        
        <!-- Benchmark Configuration Properties -->
        <benchmark.keycloak.url>http://localhost:1080</benchmark.keycloak.url>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.openjdk.jmh</groupId>
                <artifactId>jmh-core</artifactId>
                <version>${version.jmh}</version>
            </dependency>
            <dependency>
                <groupId>org.openjdk.jmh</groupId>
                <artifactId>jmh-generator-annprocess</artifactId>
                <scope>provided</scope>
                <version>${version.jmh}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- JWT Validation Test Utilities for token generation -->
        <dependency>
            <groupId>de.cuioss.jwt</groupId>
            <artifactId>cui-jwt-validation</artifactId>
            <version>${project.version}</version>
            <classifier>generators</classifier>
            <scope>compile</scope>
        </dependency>

        <!-- JMH dependencies -->
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-generator-annprocess</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- HTTP client for benchmarking -->
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Skip unit tests by default -->
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>

            <!-- Enable annotation processing for JMH -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.openjdk.jmh</groupId>
                            <artifactId>jmh-generator-annprocess</artifactId>
                            <version>${version.jmh}</version>
                        </path>
                    </annotationProcessorPaths>
                    <release>21</release>
                </configuration>
            </plugin>

            <!-- Container management and benchmark execution -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <executions>
                    <!-- Start integration tests containers before benchmarks -->
                    <execution>
                        <id>start-integration-containers</id>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <skip>${skip.benchmark}</skip>
                            <executable>../cui-jwt-quarkus-integration-tests/scripts/start-integration-container.sh</executable>
                            <workingDirectory>${project.basedir}/../cui-jwt-quarkus-integration-tests</workingDirectory>
                        </configuration>
                    </execution>
                    <!-- Run benchmarks -->
                    <execution>
                        <id>run-integration-benchmarks</id>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <skip>${skip.benchmark}</skip>
                            <executable>java</executable>
                            <arguments>
                                <argument>-classpath</argument>
                                <argument>${project.build.outputDirectory}${path.separator}${project.build.directory}/dependency/*</argument>
                                <argument>-Djmh.result.format=${jmh.result.format}</argument>
                                <argument>-Djmh.result.filePrefix=${jmh.result.filePrefix}</argument>
                                <argument>-Djmh.iterations=${jmh.iterations}</argument>
                                <argument>-Djmh.warmupIterations=${jmh.warmupIterations}</argument>
                                <argument>-Djmh.forks=${jmh.forks}</argument>
                                <argument>-Djmh.threads=${jmh.threads}</argument>
                                <argument>-Dtest.https.port=${test.https.port}</argument>
                                <argument>-Dtest.keycloak.port=${test.keycloak.port}</argument>
                                <argument>-Dbenchmark.keycloak.url=${benchmark.keycloak.url}</argument>
                                <argument>de.cuioss.jwt.quarkus.integration.benchmark.IntegrationBenchmarkRunner</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <!-- Stop integration tests containers after benchmarks -->
                    <execution>
                        <id>stop-integration-containers</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <skip>${skip.benchmark}</skip>
                            <executable>../cui-jwt-quarkus-integration-tests/scripts/stop-integration-container.sh</executable>
                            <workingDirectory>${project.basedir}/../cui-jwt-quarkus-integration-tests</workingDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Build classpath for benchmark execution -->
            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/dependency</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!-- Profile for running integration benchmarks -->
        <profile>
            <id>integration-benchmarks</id>
            <properties>
                <!-- Enable integration benchmarks -->
                <skip.benchmark>false</skip.benchmark>
            </properties>
        </profile>
    </profiles>
</project>